add loading page, header menu, footer

--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,6 @@
             <div class="loader-spinner"></div>
             <p>Cargando...</p>
         </div>
-    </div>
     <header>
         <nav>
             <ul>
@@ -24,7 +23,7 @@
         </nav>
     </header>
     <main>
-        <h1>Bienvenido a la Página Principal</h1>
+        <h1>Bienvenido a la Segunda pagina</h1>
         <p>Selecciona una opción del menú para navegar.</p>
     </main>
     <footer>
